--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "dev": "tsx --watch server.ts",
     "build": "tsc",
     "start": "node dist/server.ts",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write \"**/*.{ts,js,json,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,js,json,md}\"",
+    "check": "npm run format:check && npm run lint",
     "typeorm": "typeorm-ts-node-esm",
     "db:sync": "tsx -r dotenv/config node_modules/typeorm/cli.js schema:sync",
     "test": "vitest"
@@ -28,13 +33,23 @@
     "zod": "^4.3.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
     "@types/pg": "^8.16.0",
+    "@typescript-eslint/eslint-plugin": "^8.51.0",
+    "@typescript-eslint/parser": "^8.51.0",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.5.0",
+    "jiti": "^2.6.1",
+    "prettier": "^3.7.4",
     "tsx": "^4.21.0",
+    "typescript-eslint": "^8.51.0",
     "vitest": "^4.0.16"
   }
 }
