--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,12 +18,6 @@
     "strictPropertyInitialization": false,
     "types": ["node"]
   },
-  "include": [
-    "src/**/*",
-    "server.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["src/**/*", "server.ts"],
+  "exclude": ["node_modules", "dist"]
 }
