--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "format": "prettier --write \"**/*.{ts,js,json,md}\"",
     "format:check": "prettier --check \"**/*.{ts,js,json,md}\"",
     "check": "npm run format:check && npm run lint",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui",
     "typeorm": "typeorm-ts-node-esm",
-    "db:sync": "tsx -r dotenv/config node_modules/typeorm/cli.js schema:sync",
-    "test": "vitest"
+    "db:sync": "tsx -r dotenv/config node_modules/typeorm/cli.js schema:sync"
   },
   "keywords": [],
   "author": "",
@@ -40,14 +43,17 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
     "@types/pg": "^8.16.0",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.51.0",
     "@typescript-eslint/parser": "^8.51.0",
+    "@vitest/coverage-v8": "^4.0.16",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.5.0",
     "jiti": "^2.6.1",
     "prettier": "^3.7.4",
+    "supertest": "^7.1.4",
     "tsx": "^4.21.0",
     "typescript-eslint": "^8.51.0",
     "vitest": "^4.0.16"
