--- a/.env.test
+++ b/.env.test
@@ -5,6 +5,6 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=password
-DB_NAME=notes_test_db
+DB_NAME=notes_db
 
 JWT_SECRET=test-secret-key-for-testing
