fixxed problem of route imports for production

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,5 @@ DB_USER=postgres
 DB_PASSWORD=your_password_here
 DB_NAME=notes_db
 
-JWT_SECRET=your_super_secure__jwt_secret
-JWT_EXPIRES_IN=7d
+JWT_SECRET=your_super_secure_jwt_secret
+JWT_EXPIRES_IN=86400000
