--- a/.env.docker
+++ b/.env.docker
@@ -6,4 +6,4 @@ DB_NAME=notes_db
 
 NODE_ENV=production
 JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
-JWT_EXPIRES_IN="86400000"
+JWT_EXPIRES_IN=86400000
