updatec JWT config format and added CORS support

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,7 @@ DB_PASSWORD=your_password_here
 DB_NAME=notes_db
 
 JWT_SECRET=your_super_secure_jwt_secret
-JWT_EXPIRES_IN=86400000
+JWT_EXPIRES_IN=24h
+
+# Configuracion de CORS OPCIONAL (en formato CSV)
+# ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
