--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -36,7 +36,7 @@ services:
       DB_PASSWORD: ${DB_PASSWORD:-password}
       DB_NAME: ${DB_NAME:-notes_db}
       JWT_SECRET: ${JWT_SECRET:-dev_secret_key_only_for_development}
-      JWT_EXPIRES_IN: ${JWT_EXPIRES_IN:-86400000}
+      JWT_EXPIRES_IN: ${JWT_EXPIRES_IN:-24h}
       PORT: ${PORT:-3000}
       CHOKIDAR_USEPOLLING: "true"
       CHOKIDAR_INTERVAL: 1000
